package Enemies;

/*! \class animations_enemy_enum
    \brief Este practic un enum pentru animatiile inamicilor.
 */
public class animations_enemy_enum {
    public final static int walk = 0;
    public static final int attack = 1;
}
